--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       }
 
       .card {
-        margin-top: -18px;
+        margin-top: -28px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -47,6 +47,7 @@
         width: 36rem;
         padding: 3rem;
         background-color: #fff;
+        border-radius: 20px;
 
         box-shadow: 0 6px 18px rgba(0, 0, 0, 0.2);
       }
