--- a/index.html
+++ b/index.html
@@ -21,18 +21,19 @@
         box-sizing: border-box;
       }
 
+      @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
+
       html {
         font-size: 62.5%;
       }
 
       body {
-        background-color: rgb(234, 248, 255);
+        background-color: hsl(212, 45%, 89%);
         height: 100vh;
         display: flex;
         align-items: center;
         justify-content: center;
-        font-family: sans-serif;
-
+        font-family: "Outfit", sans-serif;
         padding: 0 2rem;
       }
 
@@ -44,12 +45,12 @@
         justify-content: center;
         gap: 1.6rem;
 
-        width: 36rem;
-        padding: 3rem;
-        background-color: #fff;
-        border-radius: 20px;
+        width: 34rem;
+        padding: 2rem;
+        background-color: hsl(0, 0%, 100%);
+        border-radius: 30px;
 
-        box-shadow: 0 6px 18px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 10px 20px hsla(217, 65%, 30%, 0.1);
       }
 
       img {
@@ -60,24 +61,29 @@
       .texts {
         display: flex;
         flex-direction: column;
-        gap: 0.8rem;
+        gap: 1.6rem;
+        padding: 1.2rem;
+        padding-top: 0.3rem;
       }
 
       h1 {
         text-align: center;
-        font-size: 2.4rem;
+        font-size: 2.2rem;
         line-height: 1.3;
+        color: hsl(218, 44%, 22%);
+        font-weight: 700;
       }
 
       p {
         text-align: center;
-        color: rgb(134, 133, 133);
-        font-size: 1.8rem;
+        color: hsl(220, 15%, 55%);
+        font-size: 1.6rem;
+        line-height: 1.3;
       }
 
       @media (max-width: 27.725em) {
         html {
-          font-size: 50%;
+          font-size: 54%;
         }
       }
     </style>
