--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         box-sizing: border-box;
       }
 
-      @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700;800;900&display=swap");
 
       html {
         font-size: 62.5%;
@@ -29,16 +29,18 @@
 
       body {
         background-color: hsl(212, 45%, 89%);
-        height: 100vh;
+        height: 70rem;
         display: flex;
         align-items: center;
         justify-content: center;
         font-family: "Outfit", sans-serif;
         padding: 0 2rem;
+        padding-top: 3.2rem;
+        padding-bottom: 3.2rem;
       }
 
       .card {
-        margin-top: -28px;
+        margin-top: -20px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -46,7 +48,8 @@
         gap: 1.6rem;
 
         width: 34rem;
-        padding: 2rem;
+        padding: 1.8rem;
+        padding-bottom: 2.2rem;
         background-color: hsl(0, 0%, 100%);
         border-radius: 30px;
 
@@ -61,15 +64,15 @@
       .texts {
         display: flex;
         flex-direction: column;
-        gap: 1.6rem;
-        padding: 1.2rem;
-        padding-top: 0.3rem;
+        gap: 1.4rem;
+        padding: 1.4rem;
+        padding-top: 0.8rem;
       }
 
       h1 {
         text-align: center;
-        font-size: 2.2rem;
-        line-height: 1.3;
+        font-size: 2rem;
+        line-height: 1.4;
         color: hsl(218, 44%, 22%);
         font-weight: 700;
       }
@@ -78,7 +81,7 @@
         text-align: center;
         color: hsl(220, 15%, 55%);
         font-size: 1.6rem;
-        line-height: 1.3;
+        line-height: 1.4;
       }
 
       @media (max-width: 27.725em) {
